--- a/example/index.html
+++ b/example/index.html
@@ -13,12 +13,11 @@
         const ws = new WebSocket('ws://localhost:1339')
 
         ws.onopen = e => {
-            console.log('Connected to the server!');
             ws.send('Client connected!');
         };
 
         ws.onmessage = msg => {
-            console.log(msg);
+            console.log(msg.data);
         };
 
         ws.onerror = err => {
